# nr-catalog-tools

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  __init__.py  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: badge_static.yml  docs.yml  python-package.yml  python-test.yml  static.yml  test-cross-catalog.yml
api/: index.html
api/catalog/: index.html
api/lvc/: index.html
api/maya/: index.html
api/metadata/: index.html
architecture/: index.html
catalog_organization/: index.html  maya_classification.json  rit_classification.json  sxs_classification.json
catalogs/: index.html
docs/: architecture.md  catalog_organization.md  catalogs.md  environment.yml  goal.md  index.md  package.md  waveform.md
goal/: index.html
nrcatalogtools/: .lvc.py.swp  .rit.py.swp  .version  __init__.py  catalog.py  classification.py  legacy.py  lvc.py  maya.py  metadata.py  registry.py  rit.py  sxs.py  time_series.py  utils.py  waveform.py
package/: index.html
package_name_here/: __init__.py
search/: search_index.json
test/: .generate_badge.py  .gitignore  config.py  conftest.py  helper.py  testMAYA.py  testSXSModes.py  test_catalog_decoupling.py  test_classification.py  test_cross_catalog_q1_nospin.py  test_gt_pol.py  test_metadata.py  test_modal_dt.py  test_rit_catalog.py  test_sxs_modes.py  test_url_exists.py  test_waveform_attr_propagation.py  test_waveform_get_mode.py  test_waveform_loaders.py
waveform/: index.html
(+32 files in other folders)
