[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nr-catalog-tools"
dynamic = ["version"]
description = "A collection of tools to interface with Numerical Relativity waveform catalogs"
readme = "README.md"
license = {text = "GPL"}
authors = [
    {name = "Prayush Kumar", email = "prayush.kumar@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML",
    "numpy",
    "scipy",
    "lalsuite",
    "ligo-common",
    "pycbc",
    "pandas",
    "sxs>=2023.0.0",
    "waveformtools",
    "mayawaves",
    "h5py",
]

[project.urls]
Homepage = "https://github.com/gwnrtools/nr-catalog-tools"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
nrcatalogtools = ["schemas/*.yaml"]

[tool.setuptools_scm]
# When building from a commit that has no tag (e.g. during development),
# setuptools_scm derives a PEP 440 local version like "2023.5.1.dev4+gabcdef".
# The fallback is used only when git history is completely unavailable.
fallback_version = "0.0.0+unknown"

